Agentforce/force-app/main/default/objects/ScratchOrgResult__c/ScratchOrgResult__c.object-meta.xml
<CustomObject>
    <label>ScratchOrgResult</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ScratchOrgResultEvent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScratchOrgResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>