Agentforce/force-app/main/default/objects/ScratchOrgResult__c/fields/ExitCode__c.field-meta.xml
<CustomField>
    <fullName>ExitCode__c</fullName>
    <label>ExitCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>