Agentforce/force-app/main/default/objects/ScratchOrgResult__c/fields/Output__c.field-meta.xml
<CustomField>
    <fullName>Output__c</fullName>
    <label>Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>